--- a/rsnapshot-config.jinja2
+++ b/rsnapshot-config.jinja2
@@ -10,6 +10,7 @@ ssh_args	-o BatchMode=yes
 interval	hourly	24
 interval	daily	7
 interval	weekly	4
+interval	monthly	12
 verbose		2
 loglevel	3
 logfile		/tmp/{{ backup.host }}.log
